Fixed build.gradle : now using jlink and jpackage to package the app, others fixes